# dtpoc

./: .gitignore  Makefile  README.md  docker-compose.yaml
config/mosquitto_config/: mosquitto.conf
infra/: Chart.yaml  values.yaml
infra/crds/: analytics.yaml
infra/samples/: ana-asset-outage.yaml  ana-bim-histopathology.yaml  ana-digital-hosp-des.yaml
infra/templates/data_storage/: influxdb.yaml  mongodb.yaml  mosquitto.yaml
infra/templates/ui/: grafana.yaml  mongo-express.yaml
scripts/: proxy.sh
services/ana_asset_outage/: Dockerfile  Makefile  requirements.in
services/ana_asset_outage/src/: __main__.py  assets.py  conf.py  database.py  main.py
services/ana_bim_histopathology/: .gitignore  Dockerfile  Makefile  requirements.in
services/ana_bim_histopathology/src/: __main__.py  conf.py  database.py  models.py
services/ana_hospital_schedule/: Makefile
services/ana_hospital_schedule/src/: conf.py  main.py
services/ana_hpath_sim/: .gitignore  Dockerfile  Makefile  requirements.in
services/ana_hpath_sim/src/: __main__.py  conf.py  database.py  excel.py  utils.py
services/orchestrator/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements.in
services/orchestrator/src/: orchestrator_operator.py
services/orchestrator_api/: .dockerignore  Dockerfile  Makefile  requirements.in
services/orchestrator_api/src/: __main__.py  conf.py  deps.py  main.py
svc/orchestrator/: pyproject.toml  requirements.txt
svc/orchestrator/src/: conf.py
svc/sim_histopathology/: Makefile  requirements.in  requirements.txt
(+61 files in other folders)
